--- a/css/anim.css
+++ b/css/anim.css
@@ -7,6 +7,11 @@
 .showCreateTask{
     display: block;
 }
+.show{
+    opacity: 1!important;
+    z-index: 10!important;
+    transition: var(--transition3);
+}
 .showCreateTask_blur{
     filter: blur(.4em);
 }
