--- a/css/card.css
+++ b/css/card.css
@@ -30,6 +30,7 @@
 .card_textarea{
     height: 100%;
     margin: 1em 0;
+    z-index: 2;
     border-radius: var(--border1);
     border: 0;
     resize: none;
@@ -37,6 +38,9 @@
     outline: none;
     color: var(--w);
     padding: var(--padd2);
+}
+.card_textarea::selection{
+    background: var(--w_op);
 }
 .card_header{
     background: var(--w_op);
@@ -112,4 +116,47 @@
 }
 .errorInput{
     border: 2px solid red!important;
+}
+
+.switch_span, .switch_label_cross{
+    background: var(--gradient-emoji);
+    opacity: 1;
+    height: 5vh;
+    width: 5vh;
+    border-radius: 100%;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: 2px solid var(--w);
+    transition: var(--transition3);
+}
+.switch_input{
+    display: none;
+}
+.switch_label_cross{
+    background: red;
+    position: relative;
+    z-index: 0;
+    opacity: 0;
+}
+.delete_card{
+    color: var(--w) !important;
+}
+
+.switch_input:checked + .switch_span {
+    opacity: .5;
+    border: 2px solid var(--grey1);
+}
+.card_overlay{
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.68), rgba(0, 0, 0, 0.51));
+    position: absolute;
+    transform: translate(var(--paddButton_), var(--paddButton_));
+    border-radius: var(--border1);
+    box-shadow: inset 0 0 20px 2px var(--b_sec_o);
 }
