--- a/css/root.css
+++ b/css/root.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 *,
  ::before,
  ::after {
@@ -19,6 +20,10 @@
     --grey2: #3e3e49;
     --grey3: #b5b5b7;
 
+    --b_sec:#2c2a28de;
+    --b_sec_o: rgba(44, 42, 40, 0.4);
+    --td_bg_body:#e4eded;
+
     --border1: 5px;
     --border2: 15px;
 
@@ -33,6 +38,7 @@
     --padd1b: 3em;
     --padd2:1em;
     --paddButton : .6em;
+    --paddButton_ : -.6em;
 
     --inseta: 10px;
     --insetb: -10px;
